# final_project_ironhack

./: .gitattributes  .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: carles-checkpoint.ipynb  pyproject-checkpoint.toml
data/clean/: athens.csv  barcelona.csv  berlin.csv  budapest.csv  lisbon.csv  paris.csv  vienna.csv
data/raw/: amsterdam.csv  london.csv  rome.csv
data/tableau/: amsterdam.csv  athens.csv  barcelona.csv  berlin.csv  budapest.csv  lisbon.csv  london.csv  paris.csv  rome.csv  vienna.csv
models/: price_model.pkl  price_model_reg.pkl  satis_model_reg.pkl  satisfaction_model.pkl
notebooks/: .gitattributes  Data Cleaning and Merging.ipynb  EDA.ipynb  Hypothesis Testing.ipynb  ML.ipynb  Tableau Cleaning.ipynb  app.py  app_reg.py  app_reg_satis.py  app_satis.py
notebooks/.ipynb_checkpoints/: EDA-checkpoint.ipynb
scalers/: normalizer.pkl  ohe.pkl
