[project]
name = "final-project"
version = "0.1.0"
description = "Carles final project Ironhack"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numpy>=2.0.2",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "scipy>=1.13.1",
    "statsmodels>=0.14.4",
    "scikit-learn>=1.6.1",
    ]
